tests/NormalTests/paczka1/small_fuzzy/96355872.err
Error in line 2: 1rOGOeggVQJ A67 70,8
Error in line 1: A39 S464 2,2
Error in line 14: kaEAa A355 41,1
Error in line 15: kaEAa S464 65,7
